[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regulatory-tools"
version = "0.1.0"
description = "Automation-first regulatory tooling for FDA SaMD development"
requires-python = ">=3.10"

dependencies = [
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "requirement(id): link test to requirement"
]

[tool.coverage.run]
omit = [
    "*/artifacts/*",
]