[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regulatory-tools"
version = "0.1.0"
description = "Automation-first regulatory tooling for FDA SaMD development"
requires-python = ">=3.10"

dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "importlib_resources",
]
forge = [
    "forge-utils @ file:///Users/reneeqian/Documents/PythonStuff/Utilities/forge",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "requirement(id): link test to requirement"
]

[tool.coverage.run]
omit = [
    "*/artifacts/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]